--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -61,14 +61,14 @@ nav .btn-primary{
 /* Start Banner Section */
 .header{
     background: #FFF8F3;
-    background-image: url(../images/header_bg.png);
+    background-image: url(../images/header_bg.png), url(../images/developer.png);
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, left center;
     width: 100%;
 }
 
 .banner{
-    padding: 30px 30px 0px 150px;
+    padding: 30px 50px 0px 150px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -82,6 +82,7 @@ nav .btn-primary{
     color: #474747;
     font-size: 45px;
     font-weight: 600;
+    /* margin-bottom: 0; */
 }
 
 .banner-title{
@@ -120,7 +121,11 @@ nav .btn-primary{
     margin-left: 25px;
     content: #FD6E0A;
 }
+
 .banner-img1{
     width: 400px;
+}
+.banner-img2{
+
 }
 /* End Banner Section */
