--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,6 +1,5 @@
 /* Global  */
 body{
-    font-family: 'Nunito', sans-serif;
     font-family: 'Open Sans', sans-serif;
     padding: 0;
     margin: 0;
@@ -64,7 +63,8 @@ nav .btn-primary{
     background-image: url(../images/header_bg.png), url(../images/developer.png);
     background-repeat: no-repeat;
     background-position: bottom right, left center;
-    width: 100%;
+    background-size: 600px, 70px;
+    
 }
 
 .banner{
