--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -4,6 +4,14 @@ body{
     padding: 0;
     margin: 0;
 }
+
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
 /* Start nav bar  */
 
 nav{
@@ -65,6 +73,7 @@ nav .btn-primary{
     background-position: bottom right, left center;
     background-size: 600px, 70px;
     
+    
 }
 
 .banner{
@@ -125,7 +134,50 @@ nav .btn-primary{
 .banner-img1{
     width: 400px;
 }
-.banner-img2{
+/* End Banner Section */
+
+/* Start Main Section */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 230px ;
+}
+
+.section-description{
+    display: flex;
+    flex-direction: column;
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    
+}
+
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
 
 }
-/* End Banner Section */
+
+.about-info{
+    text-align: center;
+}
+
+.info-title{
+    color: #757575;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.info-description{
+    
+}
